--- a/src/componentes/maker/maker.module.css
+++ b/src/componentes/maker/maker.module.css
@@ -1,4 +1,18 @@
 .maker{
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.container{
+    display: flex;
+    flex: 1;
+    margin-top: 5em;
+}
+
+@media screen and (max-width: 60rem){
+    .container{
+        flex-direction: column;
+    }
 }
